# claude-creative-stack

./: .gitignore  .markdownlint.jsonc  .markdownlintignore  .mcp.json  CLAUDE.md  LICENSE  PLAN.md  README.md  banana-beats-handoff.md  banana-beats-plan.md  banana-beats-v2-handoff.md  banana-beats-v4-final-plan.md  banana-beats-v4-plan.md  claude-plugin.marketplace.json  github-workflows-validate.yml  gitignore.example  linkedin-post-day1.md  lychee.toml  mcp.example.json  package-lock.json  package.json  research-findings-monkey-sequencer.md  v1Drive
.claude/: launch.json  settings.json
.claude/hooks/: session-start.sh
.github/workflows/: validate.yml
.next/: trace  trace-build
artifacts/: README.md
artifacts/html/: README.md  animated-presentation.html  audio-visualizer.html  banana-beats.html  barmoshe-portfolio.html  css-animation-hero.html  game-artist-portfolio.html  ghost-typewriter.html  gsap-scroll-story.html  hdr-aurora-cathedral.html  kaplay-top-down.html  last-radio-station.html  mycelium-grove.html  pacman-photomaze.html  pacman-photomaze.md  phaser3-platformer.html  (+8 more)
docs/: diagram.md
knowledge/: 00-index.md  01-claude-ecosystem.md  02-skills-system.md  03-artifacts.md  04-animation.md  05-graphics-design.md  06-games.md  07-audio.md  08-dataviz.md  09-prompting.md  10-workflows.md  11-creative-connectors.md  12-shaders-webgpu.md  13-asset-pipelines.md  14-accessibility-performance.md  15-export-recording.md  16-hooks-and-retrieval.md  17-presentations-diagrams.md  99-caveats.md
mcp/: README.md
music-studio/: .env.example  .gitignore  .mcp.json  CLAUDE.md  INSTALL.md  README.md  pyproject.toml  settings.json
music-studio/.claude-plugin/: plugin.json
music-studio/agents/: auditor.md  researcher.md  reviewer.md
music-studio/channel-brain/: audience.md  conventions.md  editing-style.md  identity.md  packaging.md  sound-identity.md
music-studio/commands/: brainstorm.md  build-new.md  episode-new.md  film-episode.md  review-analytics.md  ship-episode.md
music-studio/helpers/: grade.py  loudness.py  pack_takes.py  render.py  stem_analyze.py  thumbnail_render.py  timeline_view.py  transcribe.py
music-studio/hooks/: log-render.js  notify-stop.sh  validate-export-name.js
music-studio/skills/analytics-reviewer/: SKILL.md
music-studio/skills/analytics-reviewer/references/: comment-clustering.md  retention-patterns.md
music-studio/skills/audio-engineer/: SKILL.md
music-studio/skills/audio-engineer/references/: ffmpeg-mastering-chains.md  loudness-targets.md
music-studio/skills/build-planner/: SKILL.md
music-studio/skills/build-planner/references/: risk-checklist.md  stack-defaults.md
music-studio/skills/claude-prompt-writer/: SKILL.md
music-studio/skills/claude-prompt-writer/references/: audio-pitfalls.md  prompt-patterns.md
music-studio/skills/demo-producer/: SKILL.md
music-studio/skills/demo-producer/references/: demo-archetypes.md
music-studio/skills/edit-director/: SKILL.md
music-studio/skills/edit-director/references/: caption-rhythm.md  cut-craft.md
music-studio/skills/episode-strategist/: SKILL.md
music-studio/skills/episode-strategist/references/: good-vs-bad-examples.md  hook-formulas.md  viewer-promise-patterns.md
music-studio/skills/music-studio/: SKILL.md
music-studio/skills/music-studio/references/: hard-rules.md  quality-gates.md  routing-table.md  stages.md
music-studio/skills/publish-operator/: SKILL.md
music-studio/skills/script-writer/: SKILL.md
music-studio/skills/script-writer/references/: cold-open-patterns.md  voice-do-and-dont.md
music-studio/skills/shorts-producer/: SKILL.md
music-studio/skills/sound-vocabulary/: SKILL.md
music-studio/skills/sound-vocabulary/references/: tone-js-parameter-ranges.md  vocabulary-bridge.md  web-audio-fallbacks.md
music-studio/skills/thumbnail-packager/: SKILL.md
music-studio/skills/thumbnail-packager/references/: good-vs-bad-examples.md  thumbnail-formulas.md
music-studio/skills/title-packager/: SKILL.md
music-studio/skills/trend-researcher/: SKILL.md
music-studio/skills/trend-researcher/references/: scoring-rubric.md  sources.md
music-studio/skills/youtube-metadata/: SKILL.md
music-studio/templates/: episode-brief.md  publish-checklist-template.md  shorts-template.md  thumbnail-brief.md  youtube-description-template.md
music-studio/templates/build-skeleton/: CLAUDE.md  README.md  build-notes.md  claude-prompts.md  idea.md  project.md  todo.md
music-studio/workspace/analytics/: baseline.md
music-studio/workspace/episode-ideas/: brainstorm-2026-04-29-orbitseq.md
playground/: README.md  cat-defence.html  g-man.html  index.html  orb-defense.html  package-lock.json  package.json  stick-figure-banana.html  vite.config.ts
plugins/mycelium-grove/: .gitignore  CMakeLists.txt  README.md
plugins/mycelium-grove/Resources/web/: bridge.js  index.html  sim.js  styles.css
plugins/mycelium-grove/Source/: AudioEngine.cpp  AudioEngine.h  EventQueue.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h  Quantizer.h  ScaleTables.h  Voices.h
plugins/spritesynth/: CMakeLists.txt
plugins/spritesynth/Resources/web/: bridge.js  creatures.js  index.html  scaleTables.js  sim.js  styles.css
plugins/spritesynth/Source/: EventQueue.h  GraphSim.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Quantizer.h  ScaleTables.h
prompts/: README.md  build-animation.md  build-artifact-game.md  build-dataviz.md  build-diagram.md  build-landing-hero.md  build-presentation.md  build-shader.md  critique-and-refine.md  explore-codebase-graph.md  generate-palette.md  generate-sprite-sheet.md  generate-ui-kit.md  persona-voting.md  shader-critique.md
react-rive-pacman/: README.md  index.html  package-lock.json  package.json  vite.config.ts
recipes/: README.md  agentic-asset-pipeline.md  animated-landing.md  animated-presentation.md  codebase-knowledge-graph.md  data-story.md  design-system.md  game-jam.md
scripts/: render-diagram.mjs  smoke-artifacts.mjs  validate-skills.mjs
skills/: README.md
(+171 files in other folders)
